--- a/base-agent/Dockerfile
+++ b/base-agent/Dockerfile
@@ -1,9 +1,11 @@
-FROM britesnow/base-node:20-12-24
+FROM britesnow/base-node:21-02-15
 
 # for postgresql client 12 on buster
 RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ buster-pgdg main" >> /etc/apt/sources.list.d/pgdg.list \
     && apt-get install -y gnupg2 \
     && curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
 
-RUN apt-get -y update && apt-get install -y postgresql-client-12 && apt-get install -y redis
+RUN apt-get -y update && \
+    apt-get install -y postgresql-client-12 && \
+    apt-get install -y redis
 
