. udpate docker images to 22-01-18

--- a/base-node/Dockerfile
+++ b/base-node/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16.13.0-buster-slim
+FROM node:16.13.2-bullseye-slim
 
 # upgrade to the latest npm, curl, vim, git, and procps (for pgrep when restart)
 RUN apt-get -y update && \
@@ -12,7 +12,13 @@ RUN apt-get -y update && \
 # NOTE: for now we disable this to avoid installing npm 7.x as it has issues with some npm mirrors
 RUN npm install -g npm
 
-RUN curl -O https://binst.io/self/binst/x86_64-unknown-linux-gnu/stable/binst.tar.gz && \
-  tar -xvf binst.tar.gz && ./binst self  && echo 'source "$HOME/.binst/env"' >> ~/.bashrc
+RUN curl -O https://repo.binst.io/binst/x86_64-unknown-linux-gnu/stable/binst.tar.gz && \
+        tar -xvf binst.tar.gz && \
+        ./binst self && \
+        echo 'source "$HOME/.binst/env"' >> ~/.bashrc
+
+RUN  . $HOME/.binst/env && \ 
+      binst install ss3
+
 
 CMD ["node"]
