--- a/base-agent/Dockerfile
+++ b/base-agent/Dockerfile
@@ -1,11 +1,11 @@
-FROM britesnow/base-node:21-11-29
+FROM britesnow/base-node:22-01-18
 
-# for postgresql client 12 on buster
-RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ buster-pgdg main" >> /etc/apt/sources.list.d/pgdg.list \
+# for postgresql client 14 on bullseye
+RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ bullseye-pgdg main" >> /etc/apt/sources.list.d/pgdg.list \
     && apt-get install -y gnupg2 \
     && curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
 
 RUN apt-get -y update && \
-    apt-get install -y postgresql-client-12 && \
+    apt-get install -y postgresql-client-14 && \
     apt-get install -y redis
 
