--- a/base-node-pg/Dockerfile
+++ b/base-node-pg/Dockerfile
@@ -6,6 +6,5 @@ RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ bullseye-pgdg main" >> /e
     && curl https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add -
 
 RUN apt-get -y update && \
-    apt-get install -y postgresql-client-14 && \
-    apt-get install -y redis
+    apt-get install -y postgresql-14
 
